--- a/WordPress/Classes/ViewRelated/Comments/CommentContentTableViewCell.xib
+++ b/WordPress/Classes/ViewRelated/Comments/CommentContentTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="112" id="KGk-i7-Jjw" customClass="CommentContentTableViewCell" customModule="WordPress" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="226" id="KGk-i7-Jjw" customClass="CommentContentTableViewCell" customModule="WordPress" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="226"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="226"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="f2E-yC-BJS" userLabel="Header View">
-                        <rect key="frame" x="16" y="0.0" width="288" height="71"/>
+                        <rect key="frame" x="16" y="0.0" width="288" height="73"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gravatar" translatesAutoresizingMaskIntoConstraints="NO" id="9QY-3I-cxv" userLabel="Avatar Image View" customClass="CircularImageView" customModule="WordPress" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="38" height="38"/>
@@ -76,7 +76,7 @@
                         </constraints>
                     </view>
                     <wkWebView contentMode="scaleToFill" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="Je0-5Q-ty6">
-                        <rect key="frame" x="16" y="71" width="288" height="1"/>
+                        <rect key="frame" x="16" y="73" width="288" height="1"/>
                         <constraints>
                             <constraint firstAttribute="height" priority="999" constant="1" id="dGD-8Q-LSr"/>
                         </constraints>
@@ -86,10 +86,10 @@
                         </wkWebViewConfiguration>
                     </wkWebView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ta5-Cz-flw" userLabel="Reaction Bar View">
-                        <rect key="frame" x="16" y="72" width="288" height="40"/>
+                        <rect key="frame" x="16" y="74" width="288" height="41"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VoI-YI-Qgc" userLabel="Reply Button">
-                                <rect key="frame" x="0.0" y="0.0" width="62.5" height="40"/>
+                                <rect key="frame" x="0.0" y="0.0" width="62.5" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <color key="tintColor" systemColor="secondaryLabelColor"/>
                                 <inset key="contentEdgeInsets" minX="0.0" minY="15" maxX="15" maxY="10"/>
@@ -103,7 +103,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X2J-8b-R5F" userLabel="Like Button">
-                                <rect key="frame" x="62.5" y="0.0" width="78.5" height="40"/>
+                                <rect key="frame" x="62.5" y="0.0" width="78.5" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <color key="tintColor" systemColor="secondaryLabelColor"/>
                                 <inset key="contentEdgeInsets" minX="5" minY="15" maxX="35" maxY="10"/>
@@ -117,7 +117,6 @@
                                 </state>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="X2J-8b-R5F" firstAttribute="top" secondItem="ta5-Cz-flw" secondAttribute="top" id="2nT-bm-PdY"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="X2J-8b-R5F" secondAttribute="trailing" id="BaU-wG-gvI"/>
@@ -129,15 +128,23 @@
                             <constraint firstAttribute="bottom" secondItem="X2J-8b-R5F" secondAttribute="bottom" id="kdD-9h-GEp"/>
                         </constraints>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FDr-p8-hLn" customClass="CommentModerationBar" customModule="WordPress" customModuleProvider="target">
+                        <rect key="frame" x="16" y="115" width="288" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="9kN-qO-vv7"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="f2E-yC-BJS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="43c-iJ-UrN"/>
                     <constraint firstItem="f2E-yC-BJS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="6ia-if-elV"/>
                     <constraint firstItem="ta5-Cz-flw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="8pM-Yf-lnm"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="FDr-p8-hLn" secondAttribute="trailing" id="AGF-RI-zyl"/>
                     <constraint firstAttribute="trailingMargin" secondItem="ta5-Cz-flw" secondAttribute="trailing" id="Dto-vA-zSP"/>
                     <constraint firstItem="ta5-Cz-flw" firstAttribute="top" secondItem="Je0-5Q-ty6" secondAttribute="bottom" id="GI1-Oo-Z1Z"/>
-                    <constraint firstAttribute="bottom" secondItem="ta5-Cz-flw" secondAttribute="bottom" id="Kqb-UN-FZi"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Je0-5Q-ty6" secondAttribute="bottom" constant="10" id="L9y-c0-7zu"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="FDr-p8-hLn" secondAttribute="bottom" id="OEF-dO-tLi"/>
+                    <constraint firstItem="FDr-p8-hLn" firstAttribute="top" secondItem="ta5-Cz-flw" secondAttribute="bottom" id="WxN-cs-Qg9"/>
+                    <constraint firstItem="FDr-p8-hLn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="aDk-jp-pT3"/>
                     <constraint firstAttribute="trailingMargin" secondItem="f2E-yC-BJS" secondAttribute="trailing" id="jwQ-Hk-yip"/>
                     <constraint firstItem="Je0-5Q-ty6" firstAttribute="top" secondItem="f2E-yC-BJS" secondAttribute="bottom" id="kLg-9V-Ao1"/>
                     <constraint firstAttribute="leadingMargin" secondItem="Je0-5Q-ty6" secondAttribute="leading" id="kQZ-G5-oNs"/>
@@ -156,7 +163,7 @@
                 <outlet property="webView" destination="Je0-5Q-ty6" id="YaD-wp-E6W"/>
                 <outlet property="webViewHeightConstraint" destination="dGD-8Q-LSr" id="rBk-4R-GCz"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="234.375"/>
+            <point key="canvasLocation" x="-52.173913043478265" y="30.803571428571427"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -166,9 +173,6 @@
         <image name="star" catalog="system" width="128" height="116"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
