--- a/WordPress/Classes/ViewRelated/Domains/Domain registration/RegisterDomain.storyboard
+++ b/WordPress/Classes/ViewRelated/Domains/Domain registration/RegisterDomain.storyboard
@@ -12,7 +12,7 @@
         <scene sceneID="Ott-OI-M1X">
             <objects>
                 <viewController storyboardIdentifier="RegisterDomainSuggestionsViewController" id="czc-f5-zC7" customClass="RegisterDomainSuggestionsViewController" customModule="WordPress" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="hr1-AR-Kcc">
+                    <view key="view" autoresizesSubviews="NO" contentMode="scaleToFill" id="hr1-AR-Kcc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -22,7 +22,7 @@
                                     <segue destination="CFb-K0-jrQ" kind="embed" id="v6Z-QC-UcC"/>
                                 </connections>
                             </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N47-hP-xDu" userLabel="Button Container View">
+                            <containerView autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N47-hP-xDu" userLabel="Button Container View">
                                 <rect key="frame" x="0.0" y="583" width="375" height="84"/>
                                 <viewLayoutGuide key="safeArea" id="0hA-Vo-wWt"/>
                                 <constraints>
@@ -35,23 +35,16 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="N47-hP-xDu" firstAttribute="trailing" secondItem="hr1-AR-Kcc" secondAttribute="trailing" id="00z-KU-gma"/>
-                            <constraint firstItem="N47-hP-xDu" firstAttribute="bottom" secondItem="hr1-AR-Kcc" secondAttribute="bottom" id="CbP-Yl-3OZ" userLabel="(Button Shown) Button Container View Bottom Constraint"/>
-                            <constraint firstItem="N47-hP-xDu" firstAttribute="top" secondItem="hr1-AR-Kcc" secondAttribute="bottom" id="EBi-Nl-kQw" userLabel="(Button Hidden) Button Container View.top = bottom"/>
+                            <constraint firstItem="N47-hP-xDu" firstAttribute="bottom" secondItem="hr1-AR-Kcc" secondAttribute="bottom" id="CbP-Yl-3OZ" userLabel="Button Container View Bottom Constraint"/>
                             <constraint firstAttribute="trailing" secondItem="qRW-a0-uEt" secondAttribute="trailing" id="NvV-4f-UXu"/>
                             <constraint firstItem="qRW-a0-uEt" firstAttribute="leading" secondItem="hr1-AR-Kcc" secondAttribute="leading" id="Owz-yP-dfr"/>
                             <constraint firstItem="N47-hP-xDu" firstAttribute="leading" secondItem="hr1-AR-Kcc" secondAttribute="leading" id="aq0-ab-Svm"/>
                             <constraint firstItem="qRW-a0-uEt" firstAttribute="top" secondItem="qDC-aT-Sfz" secondAttribute="top" id="g17-8h-gCH"/>
                             <constraint firstItem="N47-hP-xDu" firstAttribute="top" secondItem="qRW-a0-uEt" secondAttribute="bottom" id="kYJ-aF-Uio"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="EBi-Nl-kQw"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
-                        <outlet property="buttonContainerHiddenConstraint" destination="EBi-Nl-kQw" id="adJ-NG-OIs"/>
-                        <outlet property="buttonContainerShownConstraint" destination="CbP-Yl-3OZ" id="UrS-wo-3co"/>
+                        <outlet property="buttonContainerBottomConstraint" destination="CbP-Yl-3OZ" id="HZV-8k-dVw"/>
                         <outlet property="buttonContainerViewHeightConstraint" destination="j00-iE-vY5" id="TES-Ic-0gY"/>
                         <outlet property="buttonViewContainer" destination="N47-hP-xDu" id="wQG-3m-IgK"/>
                     </connections>
