--- a/WordPress/Classes/ViewRelated/Comments/EditCommentViewController.xib
+++ b/WordPress/Classes/ViewRelated/Comments/EditCommentViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,23 +19,23 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <textView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="250" showsHorizontalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <textView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="250" showsHorizontalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" bouncesZoom="NO" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4">
+                    <rect key="frame" x="20" y="44" width="374" height="818"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="6"/>
                     </connections>
                 </textView>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="hd0-DM-uqE"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="4" firstAttribute="bottom" secondItem="hd0-DM-uqE" secondAttribute="bottom" id="RoP-nH-YdT"/>
-                <constraint firstItem="hd0-DM-uqE" firstAttribute="trailing" secondItem="4" secondAttribute="trailing" id="SJl-lD-GAb"/>
+                <constraint firstItem="hd0-DM-uqE" firstAttribute="trailing" secondItem="4" secondAttribute="trailing" constant="20" id="SJl-lD-GAb"/>
                 <constraint firstItem="4" firstAttribute="top" secondItem="hd0-DM-uqE" secondAttribute="top" id="iHT-Cc-3MN"/>
-                <constraint firstItem="4" firstAttribute="leading" secondItem="hd0-DM-uqE" secondAttribute="leading" id="jf7-Kx-yZn"/>
+                <constraint firstItem="4" firstAttribute="leading" secondItem="hd0-DM-uqE" secondAttribute="leading" constant="20" id="jf7-Kx-yZn"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="hd0-DM-uqE"/>
             <point key="canvasLocation" x="-1414" y="-66"/>
         </view>
     </objects>
